--- a/roles/haproxy/tasks/main.yml
+++ b/roles/haproxy/tasks/main.yml
@@ -1,5 +1,51 @@
 ---
 
+- name: make cert dir
+  file:
+    path: "{{ haproxy_cert_dir }}"
+    state: directory
+    owner: root
+    group: root
+    mode: 0755
+
+- name: put ca cert
+  copy:
+    src: "{{ ansible_cert_src_dir }}/{{ ansible_ca }}/{{ ansible_ca }}.crt"
+    dest: "{{ haproxy_cert_dir }}/{{ haproxy_ca_cert }}"
+    owner: root
+    group: root
+    mode: 0444
+
+- name: put cert
+  copy:
+    src: "{{ ansible_cert_src_dir }}/{{ target.fqdn }}/{{ target.fqdn }}.crt"
+    dest: "{{ haproxy_cert_dir }}/{{ target.fqdn }}.crt"
+    owner: root
+    group: root
+    mode: 0400
+
+- name: put key
+  copy:
+    src: "{{ ansible_cert_src_dir }}/{{ target.fqdn }}/{{ target.fqdn }}.key"
+    dest: "{{ haproxy_cert_dir }}/{{ target.fqdn }}.key"
+    owner: root
+    group: root
+    mode: 0400
+
+- name: generate pem
+  shell: >-
+    cat 
+    {{ haproxy_cert_dir }}/{{ target.fqdn }}.crt
+    {{ haproxy_cert_dir }}/{{ target.fqdn }}.key
+    > {{ haproxy_cert_dir }}/{{ target.fqdn }}.pem
+
+- name: set pem permission
+  file:
+    path: "{{ haproxy_cert_dir }}/{{ target.fqdn }}.pem"
+    owner: root
+    group: root
+    mode: 0400
+
 - name: install haproxy
   dnf:
     name: haproxy
@@ -14,10 +60,18 @@
     mode: 0644
   notify: restart_haproxy
 
-- name: port open
+- name: 80 port open
   firewalld:
     zone: public
     port: 80/tcp
+    permanent: yes
+    immediate: yes
+    state: enabled
+
+- name: 443 port open
+  firewalld:
+    zone: public
+    port: 443/tcp
     permanent: yes
     immediate: yes
     state: enabled
