--- a/roles/haproxy/tasks/main.yml
+++ b/roles/haproxy/tasks/main.yml
@@ -18,7 +18,7 @@
 
 - name: put ica cert
   copy:
-    src: "{{ ansible_cert_src_dir }}/{{ ansible_ica_dir }}/{{ ansible_ica_crt_file }}"
+    src: "{{ ansible_ica_dir }}/{{ ansible_ica_crt_file }}"
     dest: "{{ haproxy_cert_dir }}/{{ ansible_ica_crt_file }}"
     owner: root
     group: root
